Completely fresh update
Packed with more features. Structured and with updated comments and readme.

--- a/public/css/beautiful-taxonomy-filters-light-material.css
+++ b/public/css/beautiful-taxonomy-filters-light-material.css
@@ -219,6 +219,20 @@
 
 
 
+/*
+* Active filters
+*/
+.beautiful-taxonomy-filters-active-filter{
+	margin:.5em 2em;
+}
+.beautiful-taxonomy-filters-info-heading{
+	margin-top:0px;
+	margin-bottom:.5em;
+}
+.beautiful-taxonomy-filters-single-tax .single-tax-key{
+	font-weight: bold;
+}
+
 
 
 
