--- a/public/css/beautiful-taxonomy-filters-dark-material.css
+++ b/public/css/beautiful-taxonomy-filters-dark-material.css
@@ -3,7 +3,7 @@
 * Makes use of CSS3 for some finer details
 */
 /* let's clear some floats */
-.clearfix:after,.clearfix:before{display:block;overflow:hidden;height:0;content:"\0020";}.clearfix:after{clear:both;}.clearfix{zoom:1;} 
+.clearfix:after,.clearfix:before{display:block;overflow:hidden;height:0;content:"\0020";}.clearfix:after{clear:both;}.clearfix{zoom:1;}
 
 .beautiful-taxonomy-filters{
 	margin:2em;
@@ -22,27 +22,28 @@
 }
 .beautiful-taxonomy-filters-tax{
 	float: left;
+	position: relative;
 }
 .filter-count-1{
 	width:100%;
 }
 .filter-count-2{
 	margin-right:5%;
-	width:47.5%;	
+	width:47.5%;
 }
 .filter-count-2:nth-child(2n){
 	margin-right:0;
 }
 .filter-count-3{
 	margin-right:5%;
-	width:30%;	
+	width:30%;
 }
 .filter-count-3:nth-child(3n){
 	margin-right:0;
 }
 .filter-count-4{
 	margin-right:5%;
-	width:21.25%;	
+	width:21.25%;
 }
 .filter-count-4:nth-child(4n){
 	margin-right:0;
@@ -50,7 +51,7 @@
 .filter-count-many{
 	margin-right:5%;
 	margin-bottom:5%;
-	width:21.25%;	
+	width:21.25%;
 }
 .filter-count-many:nth-child(4n){
 	margin-right:0;
@@ -93,10 +94,10 @@
 	-o-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.25);
 }
 .beautiful-taxonomy-filters-button:hover{
-	background: #9ccc65;	
+	background: #9ccc65;
 }
 .beautiful-taxonomy-filters-button:active{
-	background: #7cb342;	
+	background: #7cb342;
 }
 .beautiful-taxonomy-filters-clear-all{
 	color: #FFFFFF;
@@ -167,7 +168,7 @@
 	border-top:none;
 }
 .select2-results .select2-highlighted{
-	background:#9e9e9e;	
+	background:#9e9e9e;
 }
 .select2-results .level-1{
 	padding-left:10px;
@@ -200,7 +201,13 @@
 	border-radius:0;
 	background-image: none;
 }
-
+.select2-container .term-description{
+	font-size: 0.75em;
+	font-style: italic;
+}
+.select2-results__option{
+	line-height: 1.25;
+}
 
 /* Retina-ize icons */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 2dppx)  {
@@ -243,7 +250,7 @@
 	}
 	.filter-count-4:nth-child(2n), .filter-count-many:nth-child(2n), .filter-count-3:nth-child(2n){
 		margin-right:0;
-	}	
+	}
 }
 
 /*
@@ -266,5 +273,5 @@
 */
 .beautiful-taxonomy-filters-widget .beautiful-taxonomy-filters-tax{
 	width:100%;
-	margin-bottom:20px;	
+	margin-bottom:20px;
 }
